# jaeger-test-service

./: Dockerfile  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 26f449d167af_add_unique_constr_for_username_and_email.py  317f2adab8d9_create_users_table.py  31c6baeb68e8_create_user_table.py  90f729571796_create_books_table.py  d583e38ab67d_create_book_table.py
src/: main.py
src/api/v1/: router.py
src/api/v1/user/: routes.py  schema.py
src/core/: kafka.py  middleware.py  redis.py  resolver.py  settings.py  tracer.py
src/dao/: __init__.py  base.py
src/dao/postgres/: user.py
src/dao/redis/: user.py
src/models/: __init__.py  association_table.py  base.py  book.py  user.py
